--- a/playbook.yml
+++ b/playbook.yml
@@ -11,4 +11,6 @@
           - python3
           - plexmediaserver
           - deluge
+          - sonarr
+          - radarr
         state: present
